<resources>
    <string name="app_name">Movie Catalog</string>
    <string name="movie_poster_image">Movie Poster Image</string>
    <string name="movie_title">Movie Title</string>
    <string name="released_2021">Released: 2021</string>
    <string name="lorem_ipsum">Lorem ipsum, Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</string>
    <string name="genre_name">genre_name</string>
    <string name="genre_title">Genre</string>
    <string name="filter_hint">Filter</string>
    <string-array name="filters">
        <item>None</item>
        <item>Score from highest to lowest</item>
        <item>Score from lowest to highest</item>
    </string-array>
</resources>