<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant_background"
    tools:context=".activities.MovieDetailsActivity.MovieDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/movie_poster"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/movie_poster_image"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/white"
            android:outlineSpotShadowColor="@color/white"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/item_background"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster">

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/bebas_neue"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/movie_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/released_2021"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/item_background"
            app:layout_constraintTop_toBottomOf="@+id/movie_release_date">

            <TextView
                android:id="@+id/movie_overview"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/movie_overview">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/item_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/movie_genre_title"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/genre_title"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/movie_genre"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="5dp"
                    android:maxLines="1"
                    android:text="@string/genre_name"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_genre_title"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>

